--- a/src/app/main-layout/user-session/user-session.component.html
+++ b/src/app/main-layout/user-session/user-session.component.html
@@ -34,7 +34,7 @@
       (click)="$event.stopPropagation();$event.preventDefault();">
 
       Idioma
-      <mat-button-toggle-group appearance="legacy" class="menu-user-toggle">
+      <mat-button-toggle-group appearance="standard" class="menu-user-toggle">
         <mat-button-toggle value="eng" checked>Ing</mat-button-toggle>
         <mat-button-toggle value="spa">Esp</mat-button-toggle>
       </mat-button-toggle-group>
