--- a/src/app/shared/components/gallery/gallery.component.scss
+++ b/src/app/shared/components/gallery/gallery.component.scss
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // background-color: $backdrop-color;
+  background-color: $backdrop-color;
   z-index: 200;
 }
 
