--- a/src/app/shared/form-controls/date-picker/date-picker.component.html
+++ b/src/app/shared/form-controls/date-picker/date-picker.component.html
@@ -1,4 +1,5 @@
-<span>
+<div class="fx-row-container">
+
   <input type="text" class="text-box picker"
          autocomplete="off" maxlength="11"
          #input
@@ -6,10 +7,18 @@
          [matDatepicker]="picker"
          [ngModel]="date"
          [min]="minDate"
+         [max]="maxDate"
          [class.invalid-control]="showError"
          (blur)="onBlur()"
          (change)="onInputChange(input.value)"
          (dateChange)="onChange(input.value)">
-  <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="disabled"></mat-datepicker-toggle>
-  <mat-datepicker #picker [disabled]="disabled"></mat-datepicker>
-</span>
+
+  <mat-datepicker-toggle matIconSuffix [for]="picker" [disabled]="disabled">
+
+  </mat-datepicker-toggle>
+
+  <mat-datepicker #picker [disabled]="disabled" color="primary">
+
+  </mat-datepicker>
+
+</div>
