--- a/src/app/views/_security/user-login/user-login.component.html
+++ b/src/app/views/_security/user-login/user-login.component.html
@@ -48,7 +48,7 @@
                 [checked]="showPassword"
                 (click)="$event.stopPropagation"
                 (change)="toggleShowPassword()"
-                class="mat-checkbox-warning">
+                color="accent">
                 Mostrar contraseña
               </mat-checkbox>
 
