--- a/src/app/views/land-controls/tract-index/tract-index-entries-table.component.html
+++ b/src/app/views/land-controls/tract-index/tract-index-entries-table.component.html
@@ -48,11 +48,13 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> </th>
     <td mat-cell *matCellDef="let row" class="column-action">
-      <mat-icon *ngIf="row.actions.canBeDeleted"
-        (click)="onRemoveRecordingActClicked(row)"
-        title="Eliminar este acto">
-        delete
-      </mat-icon>
+      <button *ngIf="row.actions.canBeDeleted" mat-icon-button
+        title="Eliminar este acto"
+        (click)="onRemoveRecordingActClicked(row)">
+        <mat-icon>
+          delete
+        </mat-icon>
+      </button>
     </td>
   </ng-container>
 
