--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -205,7 +205,7 @@
     </div>
 
     <mat-divider *ngIf="actions.can.editInstrument || actions.show.registrationStamps || addMode"
-      class="divider-padding" >
+      class="horizontal" >
 
     </mat-divider>
 
