--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -27,7 +27,7 @@
                        tractIndex.actions.canBeOpened ||
                        tractIndex.actions.canBeUpdated">
 
-    <mat-divider class="divider-padding"></mat-divider>
+    <mat-divider class="horizontal"></mat-divider>
 
     <div fxLayout="row" [style.marginRight.px]="8">
 
