--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -186,7 +186,7 @@
 
     </ng-container>
 
-    <mat-divider class="divider-padding"></mat-divider>
+    <mat-divider class="horizontal"></mat-divider>
 
     <div fxLayout="row">
 
