--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -140,7 +140,7 @@
 
     <ng-container *ngIf="recordingAct.actions.isEditable">
 
-      <mat-divider class="divider-padding" >
+      <mat-divider class="horizontal" >
 
       </mat-divider>
 
