--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-editor.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-editor.component.html
@@ -85,7 +85,7 @@
 
     </div>
 
-    <mat-divider class="divider-padding"></mat-divider>
+    <mat-divider class="horizontal"></mat-divider>
 
     <div fxLayout="row">
 
