--- a/src/app/views/transactions/transaction-header/transaction-header.component.html
+++ b/src/app/views/transactions/transaction-header/transaction-header.component.html
@@ -103,7 +103,7 @@
 
     </div>
 
-    <mat-divider class="divider-padding"></mat-divider>
+    <mat-divider class="horizontal"></mat-divider>
 
     <div fxLayout="row" *ngIf="isSaved && !editionMode">
 
