--- a/src/app/views/transactions/workflow-commander/workflow-commander.component.html
+++ b/src/app/views/transactions/workflow-commander/workflow-commander.component.html
@@ -19,7 +19,7 @@
 
     </emp-land-list-selector>
 
-    <mat-divider class="divider-padding"></mat-divider>
+    <mat-divider class="horizontal"></mat-divider>
 
     <div fxLayout="row">
 
