--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -5,8 +5,6 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-@import "variables";
-
 fieldset {
   border: 0;
 }
@@ -28,6 +26,11 @@ form.form-section {
     font-weight: 600;
   }
 
+  &.text-white label {
+    color: $white;
+    font-weight: 500;
+  }
+
   button {
     margin-right: 8px;
   }
@@ -41,21 +44,31 @@ form.submitted select.ng-invalid {
 
 form .inline-error {
   color: $warning-color;
+  border: 1px solid $warning-color;
+  padding: 8pt;
   font-size: 10pt;
   font-weight: 400;
-  padding: 8pt;
-  margin: 0 10px 12px 0;
-  border: 1px solid $warning-color;
+  margin: 0 8px 12px 0;
+  border-radius: 1px;
+}
+
+form .inline-warning {
+  color: $layout-secondary-color;
+  border: 1px solid $layout-secondary-color;
+  padding: 4px;
+  font-size: 10pt;
+  font-weight: 400;
+  margin: 0 8px 12px 0;
   border-radius: 1px;
 }
 
 form .inline-info {
   color: $primary-color;
+  border: 1px solid $primary-color;
+  padding: 8pt;
   font-size: 10pt;
   font-weight: 400;
-  padding: 8pt;
   margin: 0 10px 12px 0;
-  border: 1px solid $primary-color;
   border-radius: 1px;
 }
 
@@ -88,7 +101,7 @@ form .inline-info {
 }
 
 .invalid-control {
-  border-left: 5px solid $warning-color  !important;
+  border-left: 5px solid $warning-color !important;
 }
 
 .title-section {
