--- a/src/app/shared/form-controls/date-picker/date-picker.component.scss
+++ b/src/app/shared/form-controls/date-picker/date-picker.component.scss
@@ -5,10 +5,10 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-@import "../../../../styles/general-styles";
+@import "../../../../styles/variables";
 
 .picker {
-  width: $date-picker-width  !important;
+  width: $date-picker-width !important;
   margin: 2px 0 2px 0 !important;
   border-radius: 2px 0 0 2px !important;
 }
