--- a/src/app/shared/form-controls/date-range-picker/date-range-picker.component.html
+++ b/src/app/shared/form-controls/date-range-picker/date-range-picker.component.html
@@ -1,6 +1,7 @@
-<div class="row">
+<div class="fx-row-container">
 
-  <mat-date-range-input [rangePicker]="picker"
+  <mat-date-range-input class="range-picker"
+    [rangePicker]="picker"
     [comparisonStart]="getDateForComparison(comparisonStartDate)"
     [comparisonEnd]="getDateForComparison(comparisonEndDate)"
     [min]="minDate" [max]="maxDate ?? fixedEndDate"
@@ -27,9 +28,12 @@
 
   </mat-date-range-input>
 
-  <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="disabled"></mat-datepicker-toggle>
+  <mat-datepicker-toggle matIconSuffix [for]="picker" [disabled]="disabled">
+
+  </mat-datepicker-toggle>
 
   <mat-date-range-picker #picker [disabled]="disabled"
+    color="primary"
     [startView]="selectedPickerView"
     [panelClass]="[isYearSelection || isMonthSelection ? 'selection-type-picker': '',
                    isMonthSelection ? 'default-calendar-hidden' : '']"
