--- a/src/app/views/_access-control/security-item/security-item-edition.component.html
+++ b/src/app/views/_access-control/security-item/security-item-edition.component.html
@@ -44,9 +44,9 @@
     <ng-container matColumnDef="actionDelete">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <button mat-icon-button>
-          <mat-icon [title]="'Eliminar ' +  itemTypeName | lowercase"
-            (click)="onRemoveItemClicked(row)">
+        <button mat-icon-button [title]="'Eliminar ' +  itemTypeName | lowercase"
+          (click)="onRemoveItemClicked(row)">
+          <mat-icon>
             delete
           </mat-icon>
         </button>
