--- a/src/app/views/certificate-emission/certificate-creator.component.html
+++ b/src/app/views/certificate-emission/certificate-creator.component.html
@@ -88,7 +88,7 @@
 
     </div>
 
-    <mat-divider class="divider-padding"></mat-divider>
+    <mat-divider class="horizontal"></mat-divider>
 
     <div fxLayout="row">
 
