--- a/src/app/views/certificate-emission/certificate-list.component.html
+++ b/src/app/views/certificate-emission/certificate-list.component.html
@@ -44,10 +44,13 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon title="Eliminar este certificado" *ngIf="row.actions.canDelete"
+        <button *ngIf="row.actions.canDelete" mat-icon-button
+          title="Eliminar este certificado"
           (click)="onRemoveCertificateClicked(row)">
-          delete
-        </mat-icon>
+          <mat-icon>
+            delete
+          </mat-icon>
+        </button>
       </td>
     </ng-container>
 
