--- a/src/app/views/recordable-subjects/parties/party-editor.component.html
+++ b/src/app/views/recordable-subjects/parties/party-editor.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" empNgFormKeyDownEnter
   fxLayout="column" autocomplete="off" class="form-section">
 
-  <mat-divider class="divider-padding">
+  <mat-divider class="horizontal">
 
   </mat-divider>
 
@@ -114,7 +114,7 @@
     </div>
   </div>
 
-  <mat-divider class="divider-padding">
+  <mat-divider class="horizontal">
 
   </mat-divider>
 
