--- a/src/app/views/recordable-subjects/parties/party-list.component.html
+++ b/src/app/views/recordable-subjects/parties/party-list.component.html
@@ -45,7 +45,13 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon (click)="removeParty(row)" title="Remover Persona">delete</mat-icon>
+        <button mat-icon-button
+          title="Remover Persona"
+          (click)="removeParty(row)">
+          <mat-icon>
+            delete
+          </mat-icon>
+        </button>
       </td>
     </ng-container>
 
