--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -31,12 +31,11 @@
     <ng-container matColumnDef="actionCopy">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon title="Copiar folio electrónico"
-          matRipple [matRippleCentered]="true" [matRippleUnbounded]="true"
-          [cdkCopyToClipboard]="row.recordableSubject.electronicID"
-          (cdkCopyToClipboardCopied)="showAlertTextCopied($event)">
-          bookmark
-        </mat-icon>
+        <emp-ng-button-copy-to-clipboard title="Copiar folio electrónico"
+          itemToCopy="Folio electrónico"
+          [textToCopy]="row.recordableSubject.electronicID">
+
+        </emp-ng-button-copy-to-clipboard>
       </td>
     </ng-container>
     <ng-container matColumnDef="type">
@@ -65,20 +64,27 @@
     <ng-container matColumnDef="actionDelete">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon
-          (click)="removeRecordingAct(row)"
-          title="Remover este acto">
-          delete
-        </mat-icon>
+        <button mat-icon-button
+          title="Remover este acto"
+          (click)="removeRecordingAct(row)">
+          <mat-icon>
+            delete
+          </mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="notFoundMessage">
+      <td mat-footer-cell *matFooterCellDef [attr.colspan]="displayedColumns.length">
+       Todavía no se han registrado actos jurídicos en el documento.
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    <tr mat-footer-row *matFooterRowDef="['notFoundMessage']" class="text-not-found"
+      [hidden]="dataSource.data.length > 0"></tr>
 
-  <div *ngIf="dataSource?.data.length === 0" class="text-not-found">
-    <p>Todavía no se han registrado actos jurídicos en el documento.</p>
-  </div>
+  </table>
 
 </div>
