--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -19,30 +19,40 @@
     <ng-container matColumnDef="actionShowFiles">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row; let i = index" class="column-action">
-        <mat-icon title="Mostrar archivos" *ngIf="row.mediaFiles?.length > 0"
-          (click)="showFilesBookEntry(row);">
-          auto_stories
-        </mat-icon>
+        <button mat-icon-button
+          *ngIf="row.mediaFiles?.length > 0"
+          title="Mostrar archivos"
+          (click)="showFilesBookEntry(row)">
+          <mat-icon>
+            auto_stories
+          </mat-icon>
+        </button>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="actionEdit">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row; let i = index" class="column-action">
-        <mat-icon title="Editar inscripción"
+        <button mat-icon-button
+          title="Editar inscripción"
           (click)="onBookEntryClicked(row)">
-          edit
-        </mat-icon>
+          <mat-icon>
+            edit
+          </mat-icon>
+        </button>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="actionDelete">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row; let i = index" class="column-action">
-        <mat-icon title="Eliminar inscripción"
+        <button mat-icon-button
+          title="Eliminar inscripción"
           (click)="removeBookEntry(row);">
-          delete
-        </mat-icon>
+          <mat-icon>
+            delete
+          </mat-icon>
+        </button>
       </td>
     </ng-container>
 
