--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
@@ -41,7 +41,13 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon (click)="removeService(row)">delete</mat-icon>
+        <button mat-icon-button
+          title="Eliminar concepto"
+          (click)="removeService(row);">
+          <mat-icon>
+            delete
+          </mat-icon>
+        </button>
       </td>
     </ng-container>
 
