--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import './styles/app-loading.scss';
 @import './styles/variables';
+@import './styles/mixins';
+
+@import './styles/app-loading';
 @import './styles/base';
+@import './styles/layout';
+@import './styles/responsive';
+
 @import './styles/angular-material-theme';
 @import './styles/angular-material-styles';
-@import './styles/responsive';
+
 @import './styles/general-styles';
-@import './styles/form';
 @import './styles/explorer';
 @import './styles/card';
+@import './styles/reporting-formats';
+@import './styles/grid';
 @import './styles/list';
-@import './styles/ng-select.scss';
-@import './styles/text-editor.scss';
-@import './styles/reporting-formats.scss';
+@import './styles/form';
+@import './styles/ng-select';
+@import './styles/text-editor';
+@import './styles/tile';
 @import './styles/file-preview.scss';
