--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -11,47 +11,31 @@
   color: $icon-color;
   font-family: "Material Icons" !important;
 
-  &.icon-success {
-    color: $icon-color-success;
-  }
-
+  &.icon-success,
   &.icon-success:hover {
     color: $icon-color-success;
   }
 
-  &.icon-warning {
-    color: $icon-color-warning;
-  }
-
+  &.icon-warning,
   &.icon-warning:hover {
     color: $icon-color-warning;
   }
 
-  &.icon-error {
-    color: $icon-color-error;
-  }
-
+  &.icon-error,
   &.icon-error:hover {
     color: $icon-color-error;
   }
-
-  &.mat-icon-sm {
-    font-size: 20px;
-    width: 20px;
-    height: 20px;
-  }
 }
 
-a,
-.mat-icon-button,
-.column-action {
-  .mat-icon {
-    cursor: pointer;
-  }
+.mat-mdc-icon-button.mat-mdc-button-base {
+  height: 32px;
+  width: 32px;
+  padding: 4px;
+}
 
-  .mat-icon:hover {
-    color: $icon-color-dark;
-  }
+.mat-mdc-button-touch-target {
+  height: 32px !important;
+  width: 32px !important;
 }
 
 .material-icons-outlined,
@@ -68,47 +52,45 @@ a,
   width: calc(100% - 9px);
 }
 
-.mat-tab-label {
+.mat-mdc-tab {
   height: 42px !important;
-  min-width: 120px !important;
-  padding: 0 20px !important;
-  color: $secondary-color-dark;
   font-size: 10pt;
   text-transform: uppercase;
-  opacity: 1 !important;
 }
 
-.mat-step-icon-state-edit {
-  color: $secondary-color;
-}
-
-.mat-tab-label-active {
+.mat-mdc-tab:not(.mat-mdc-tab-disabled).mdc-tab--active .mdc-tab__text-label,
+.mat-mdc-tab-link:not(.mat-mdc-tab-disabled).mdc-tab--active .mdc-tab__text-label {
   color: $primary-color-dark;
-  font-weight: 600 !important;
+  font-weight: 600;
 }
 
-.mat-tab-header-pagination {
+.mat-mdc-tab-group {
+  height: 100%;
+}
+
+.mat-mdc-tab-body-wrapper {
+  height: 100%;
+}
+
+.mat-mdc-tab-header-pagination {
   z-index: 1 !important;
 }
 
-.mat-tab-group {
-  height: 100%;
+.mat-mdc-tab-header {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.mat-tab-body-wrapper {
-  height: 100%;
-}
-
-.mat-ink-bar {
-  background-color: $title-color !important;
-}
-
-.mat-tab-group .mat-tab-body {
+.mat-mdc-tab-group .mat-mdc-tab-body {
   padding: 0;
 }
 
-.mat-tab-body-content {
+.mat-mdc-tab-body-content {
   padding: 16px 20px;
+}
+
+.mat-mdc-tab:not(.mat-mdc-tab-disabled) .mdc-tab-indicator__content--underline,
+.mat-mdc-tab-link:not(.mat-mdc-tab-disabled) .mdc-tab-indicator__content--underline {
+  border-color: $title-color;
 }
 
 //
@@ -122,6 +104,10 @@ a,
 .mat-step-icon .mat-icon,
 .mat-step-header .mat-step-icon {
   color: $white;
+}
+
+.mat-step-icon-state-edit {
+  color: $secondary-color;
 }
 
 .mat-step-header .mat-step-icon-selected,
@@ -148,36 +134,6 @@ a,
 .mat-stepper-label-position-bottom .mat-horizontal-stepper-header:not(:last-child)::after,
 [dir=rtl] .mat-stepper-label-position-bottom .mat-horizontal-stepper-header:not(:first-child)::after {
   display: none !important;
-}
-
-//
-// secondary tabs component
-//
-
-.secondary-mat-tab-group {
-  .mat-tab-label {
-    color: $secondary-color-light;
-    height: 36px !important;
-    text-transform: none;
-  }
-}
-
-//
-// dialog component
-//
-
-.mat-dialog-title {
-  border-bottom: 2px solid $primary-color;
-  color: $primary-color;
-  font-size: 14pt;
-  font-weight: 600;
-  padding: 8pt;
-}
-
-.mat-dialog-actions {
-  justify-content: flex-end;
-  border-top: 1px solid $secondary-color;
-  padding: 12px;
 }
 
 //
@@ -224,30 +180,19 @@ a,
 // mat-table components
 //
 
-table.mat-table {
+table.mat-mdc-table {
   background: $white;
   width: 100%;
   margin: 0.5rem 0;
-  font-family: $font-family-secondary;
 
   th {
     font-weight: 500;
-    padding: 10px 10px 10px 0;
+    padding: $grid-entry-padding-vertical $grid-entry-padding-horizontal $grid-entry-padding-vertical 0;
 
-    &.mat-header-cell {
+    &.mat-mdc-header-cell {
       border-bottom: 2pt solid $title-color;
       font-size: $font-size-grid-header;
-      font-family: $font-family;
-    }
-
-    &.text-align-right {
-      text-align: right;
-      justify-content: flex-end;
-    }
-
-    &.text-align-center {
-      text-align: center;
-      justify-content: center;
+      line-height: normal;
     }
 
     &.column-action-check {
@@ -261,34 +206,40 @@ table.mat-table {
     &:last-of-type {
       padding-right: 10px !important;
     }
+
+    &.column-action {
+      text-align: center;
+      width: $grid-row-height !important;
+      padding-top: 0;
+      padding-bottom: 0;
+      padding-right: $grid-entry-padding-vertical;
+    }
   }
 
   td {
     vertical-align: top;
     padding: 10px 10px 10px 0;
+    font-family: $font-family-secondary;
     font-size: $font-size-grid;
-
-    .mat-icon-button {
-      width: 24px;
-      height: 24px;
-      line-height: 24px;
-    }
+    line-height: $font-size-grid;
 
     &:first-of-type {
       padding-left: 10px;
     }
 
-    &.mat-cell:last-of-type,
-    &.mat-footer-cell:last-of-type {
+    &.mat-mdc-cell:last-of-type,
+    &.mat-mdc-footer-cell:last-of-type {
       padding-right: 10px;
       width: auto;
     }
 
     &.column-action {
       text-align: center;
-      width: 32px !important;
-      padding-top: 4px;
-      padding-bottom: 4px;
+      width: $grid-row-height !important;
+      padding-top: 0;
+      padding-bottom: 0;
+      padding-right: $grid-entry-padding-vertical;
+      vertical-align: middle;
     }
 
     &.column-action-check {
@@ -301,6 +252,11 @@ table.mat-table {
     &.column-no-padding {
       padding-top: 2px;
       padding-bottom: 2px;
+    }
+
+    &.padding-icon {
+      padding-top: 4px;
+      padding-bottom: 4px;
     }
 
     a.item-link {
@@ -317,17 +273,23 @@ table.mat-table {
       text-decoration: underline;
       white-space: nowrap;
     }
+
+    .text-highlight {
+      font-size: $font-size-grid * 1.1;
+      color: $primary-color;
+    }
   }
 
   tr {
-    height: $grid-row-height;
+    height: $grid-row-height !important;
 
-    &.mat-header-row,
-    &.mat-footer-row {
-      height: 30px;
+    &.mat-mdc-header-row,
+    &.mat-mdc-footer-row {
+      height: $grid-header-height !important;
 
       th {
         color: $grid-header-color;
+        font-weight: 500;
       }
 
       td {
@@ -335,14 +297,15 @@ table.mat-table {
       }
     }
 
-    &.mat-header-row {
+    &.mat-mdc-header-row {
       background-color: $grid-header-background-color;
     }
 
-    &.mat-footer-row {
+    &.mat-mdc-footer-row {
 
       &.text-not-found > td {
         padding: 1rem;
+        text-align: center;
       }
 
       &:not(.text-not-found) {
@@ -350,22 +313,137 @@ table.mat-table {
       }
     }
 
-    &.mat-row {
+    &.mat-mdc-row {
       background-color: $white;
+    }
+  }
+
+  .text-align-right {
+    text-align: right !important;
+    justify-content: flex-end !important;
+  }
+
+  .text-align-center {
+    text-align: center !important;
+    justify-content: center !important;
+  }
+}
+
+table.mat-mdc-table.emp-designer {
+  border-collapse: separate;
+  border-spacing: 0;
+
+  th {
+    padding: 6px;
+
+    &.mat-mdc-header-cell {
+      border-top: 1px solid $designer-border-color;
+      border-bottom: 1px solid $designer-border-color;
+      border-right: 1px solid $designer-border-color;
+    }
+
+    &:first-of-type {
+      border-left: 1px solid $designer-border-color;
+      left: 0;
+      position: sticky !important;
+      z-index: 101 !important;
+      user-select: none;
+    }
+
+    &:hover .resize-handle {
+      opacity: 1;
+      transition: 0.3s ease-in-out;
+    }
+  }
+
+  td {
+    padding: 6px;
+    border-bottom: 1px solid $designer-border-color;
+    border-right: 1px solid $designer-border-color;
+
+    &:first-of-type {
+      user-select: none;
+      cursor: pointer;
+      background-color: $designer-bar-background;
+      border-left: 1px solid $designer-border-color;
+      left: 0;
+      position: sticky;
+      text-align: center;
+      width: 28px;
+      z-index: 2;
+    }
+
+    &:first-of-type:hover {
+      background-color: $designer-border-color;
+    }
+
+    .designer-button {
+      cursor: pointer;
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      left: 0;
+      padding: 6px;
+    }
+
+    input {
+      background: inherit;
+      border: none;
+      color: $control-color;
+      font: $control-font;
+      font-size: $font-size-grid;
+      font-weight: normal;
+      width: 100%;
+    }
+  }
+
+  tr {
+    height: 28px !important;
+
+    &.mat-mdc-header-row,
+    &.mat-mdc-footer-row {
+      height: 28px !important;
+
+      th {
+        color: #000;
+        font-weight: 500;
+
+        &:first-of-type {
+          color: $designer-bar-background;
+          padding: 6px 8px;
+        }
+      }
+
+      td {
+        color: $text-color;
+      }
+    }
+
+    &.mat-mdc-header-row {
+      background-color: $designer-bar-background;
+
+      .header-bold {
+        font-weight: 600;
+      }
     }
   }
 }
 
-.mat-table-sticky {
+.mdc-data-table__row:last-child .mdc-data-table__cell {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12) !important;
+}
+
+.mat-mdc-table-sticky {
   transform: translateZ(0);
 }
 
 .scrollable-container {
   overflow-y: auto;
   max-height: calc(100% - 2px);
-  margin: 1px 1px 8px 1px;
+  margin: 1px;
 
-  table.mat-table {
+  table.mat-mdc-table {
     margin: 0;
     width: 100%;
     max-width: 100%;
@@ -378,7 +456,7 @@ table.mat-table {
   height: calc(100% - 2px);
   width: calc(100% - 8px);
 
-  table.mat-table {
+  table.mat-mdc-table {
     margin: 0;
     width: 100%;
     max-width: 100%;
@@ -395,10 +473,6 @@ table.mat-table {
 //
 
 .mat-divider {
-  &.divider-padding {
-    margin: 0.5rem 0.5rem 0.5rem 0;
-  }
-
   &.horizontal {
     margin: 8px 8px 8px 0;
   }
@@ -407,13 +481,17 @@ table.mat-table {
     margin: 0 8px 8px 0;
   }
 
+  &.horizontal-wide {
+    margin: 8px -16px;
+  }
+
   &.vertical {
     margin: 12px 8px 0 0;
     height: $control-height;
   }
 
-  &.vertical-slim {
-    margin: 0 8px 0 0;
+  &.vertical-inline {
+    margin: 0 0.75rem;
     height: $control-height;
   }
 }
@@ -426,7 +504,6 @@ table.mat-table {
   min-height: 36px;
   height: auto;
   padding: 4px 24px !important;
-  font-family: $font-family;
   font-size: 10pt;
   font-weight: 400;
 }
@@ -458,7 +535,7 @@ table.mat-table {
 .mat-datepicker-toggle {
   margin-right: 8px;
 
-  .mat-icon-button {
+  .mat-mdc-icon-button {
     width: 28px;
     height: 28px;
     line-height: 22px;
@@ -471,15 +548,25 @@ table.mat-table {
     .mat-datepicker-toggle-default-icon {
       color: $icon-color;
     }
+
+    &.mat-mdc-button-base {
+      padding: 2px;
+    }
   }
 
-  .mat-icon-button:hover {
+  .mat-mdc-icon-button:hover {
     background-color: $selected-control-background-color;
     transition: 0.3s ease-out;
 
     .mat-datepicker-toggle-default-icon {
       color: $icon-color-dark;
     }
+  }
+
+  .mat-mdc-icon-button .mat-mdc-button-ripple,
+  .mat-mdc-icon-button .mat-mdc-button-persistent-ripple,
+  .mat-mdc-icon-button .mat-mdc-button-persistent-ripple::before {
+    border-radius: 0;
   }
 }
 
@@ -519,8 +606,7 @@ table.mat-table {
     }
   }
 
-  .mat-date-range-input-start-wrapper,
-  .mat-date-range-input-end-wrapper {
+  .mat-date-range-input-wrapper {
     width: 84px !important;
     height: 24px !important;
     margin: auto;
@@ -548,7 +634,7 @@ table.mat-table {
     }
   }
 
-  .mat-date-range-input-start-wrapper {
+  .mat-start-date {
     text-align: right;
   }
 
@@ -570,15 +656,33 @@ table.mat-table {
 // mat menu item
 //
 
-.mat-menu-panel {
-  max-height: calc(100vh - 35px) !important;
+.mat-mdc-menu-panel {
   min-height: 51px !important;
+  max-height: calc(100vh - 35px) !important;
 }
 
-.mat-menu-item {
+.mat-mdc-menu-item {
   line-height: 35px !important;
   height: 35px !important;
-  font-family: $font-family;
+  min-height: 35px !important;
+}
+
+.mat-mdc-menu-content,
+.mat-mdc-menu-content .mat-mdc-menu-item .mdc-list-item__primary-text {
+  font-size: 9pt;
+}
+
+.mat-mdc-menu-item.selected {
+  background: rgba(0, 0, 0, 0.04);
+
+  .mdc-list-item__primary-text {
+    color: $primary-color;
+    font-weight: 600;
+  }
+}
+
+.mat-mdc-menu-trigger.active a {
+  color: $primary-color;
 }
 
 //
@@ -620,95 +724,101 @@ table.mat-table {
 // checkbox
 //
 
-.mat-checkbox {
-  .mat-checkbox-frame {
-    background: $white !important;
+.mat-mdc-checkbox {
+
+  .mdc-checkbox {
+
+    width: 16px;
+    height: 16px;
+    flex: 0 0 16px;
+    padding: 6px !important;
+
+    .mdc-checkbox__background {
+      top: 6px !important;
+      left: 6px !important;
+    }
+
+    .mdc-checkbox__native-control {
+      width: 28px !important;
+      height: 28px !important;
+    }
+
+    .mdc-checkbox__native-control:enabled:not(:checked):not(:indeterminate):not([data-indeterminate=true]) ~ .mdc-checkbox__background {
+      background-color: $white !important;
+    }
+
   }
 
-  .mat-checkbox-label {
-    font-size: 9pt;
+  .mdc-form-field > label {
+    font-size: 8.5pt;
     margin-right: 8px;
+    line-height: 16px;
   }
 
-  &.no-label .mat-checkbox-label {
+  &.no-label .mdc-form-field > label {
     margin-right: 0;
+    display: none;
   }
 
-  &.mat-checkbox-checked,
-  &.mat-checkbox-indeterminate {
-    .mat-checkbox-background {
-      background-color: $checkbox-background-color !important;
-    }
-
-    &.mat-checkbox-disabled {
-      .mat-checkbox-background {
-        background-color: lighten($control-disabled-color, 20%) !important;
-      }
-
-      .mat-checkbox-label {
-        color: lighten($control-disabled-color, 20%) !important;
-      }
-    }
-  }
-
-  &:not(.mat-checkbox-warning) .mat-checkbox-inner-container {
-    margin-top: -4px;
-  }
-}
-
-.mat-checkbox.mat-checkbox-warning {
-
-  &.mat-checkbox-checked,
-  &.mat-checkbox-indeterminate {
-    .mat-checkbox-background {
-      background-color: $checkbox-warning-background-color !important;
-    }
-  }
-
-  .mat-checkbox-label {
+  &.mat-warn .mdc-form-field > label {
     color: $white;
   }
+
+  &.mat-mdc-checkbox-disabled .mdc-form-field > label {
+    color: $control-disabled-color !important;
+  }
+
 }
 
 //
 // radio button
 //
 
-.mat-radio-group {
+.mat-mdc-radio-group {
   height: 28px;
   display: flex;
   align-items: center;
   margin: 2px 0;
 }
 
-.mat-radio-button ~ .mat-radio-button {
-  margin-left: 32px;
-}
-
-.mat-radio-label {
-  display: inline-flex !important;
-  font-size: 9pt !important;
-}
-
-.no-label .mat-radio-label-content {
-  padding-left: 0;
-}
-
-.mat-radio-outer-circle {
+.mdc-radio__outer-circle {
   background-color: $white;
 }
 
-.mat-radio-button.mat-radio-checked .mat-radio-outer-circle {
-  border-color: $checkbox-background-color !important;
-}
+.mat-mdc-radio-button {
 
-.mat-radio-button.mat-radio-disabled .mat-radio-label-content {
-  color: $control-color;
-}
+  .mdc-radio {
+    padding: 6px !important;
 
-.mat-radio-button .mat-radio-inner-circle {
-  color: $checkbox-background-color !important;
-  background-color: $checkbox-background-color !important;
+    .mdc-radio__native-control {
+      height: 32px !important;
+      width: 32px !important;
+    }
+  }
+
+  .mdc-radio__background::before {
+    height: 32px !important;
+    width: 32px !important;
+    top: -6px !important;
+    right: -6px !important;
+    left: -6px !important;
+    bottom: -6px !important;
+  }
+
+  .mdc-form-field > label {
+    font-size: 9pt;
+  }
+
+
+  &.no-label .mdc-form-field > label {
+    margin-right: 0;
+    display: none;
+  }
+
+  ~ .mat-mdc-radio-button {
+    margin-left: 32px;
+  }
+
 }
 
 .radio-group-vertical {
@@ -717,37 +827,6 @@ table.mat-table {
   flex-direction: column;
   margin: 0;
   align-items: flex-start;
-}
-
-.radio-button-vertical {
-  margin: 8px 8px 8px 0;
-}
-
-.radio-button-vertical ~ .radio-button-vertical {
-  margin-left: 0;
-}
-
-//
-// ripple
-//
-
-.mat-checkbox .mat-checkbox-ripple,
-.mat-checkbox .mat-ripple-element,
-.mat-radio-button .mat-radio-ripple,
-.mat-radio-button .mat-ripple-element {
-  left: calc(50% - 16px) !important;
-  top: calc(50% - 16px) !important;
-  height: 32px !important;
-  width: 32px !important;
-}
-
-.mat-checkbox-ripple .mat-ripple-element,
-.mat-radio-ripple .mat-ripple-element {
-  background: $checkbox-background-color !important;
-}
-
-.mat-checkbox.mat-checkbox-warning .mat-checkbox-ripple > .mat-ripple-element {
-  background: $checkbox-warning-background-color !important;
 }
 
 //
