--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -5,56 +5,7 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-// Responsive mixins and classes
-
-$medium-max-width: 1024px;
-$small-max-width: 540px;
-
-@mixin small() {
-  @media only screen and (max-width: $small-max-width) {
-    @content;
-  }
-}
-
-@mixin medium() {
-  @media only screen and (max-width: $medium-max-width) {
-    @content;
-  }
-}
-
-@mixin small-hide() {
-  @media only screen and (max-width: $small-max-width) {
-    display: none !important;
-  }
-}
-
-@mixin medium-hide() {
-  @media only screen and (max-width: $medium-max-width) {
-    display: none !important;
-  }
-}
-
-.small-hide {
-  @include small-hide;
-}
-
-.medium-hide {
-  @include medium-hide;
-}
-
-@mixin row() {
-  display: flex;
-  flex-flow: row nowrap;
-}
-
-@mixin column() {
-  display: flex;
-  flex-direction: column;
-}
-
-@mixin expand() {
-  flex: 1;
-}
+@import 'mixins';
 
 .row {
   @include row;
