Update base modules, class and components

--- a/src/app/shared/form-controls/file-control/file-control.component.html
+++ b/src/app/shared/form-controls/file-control/file-control.component.html
@@ -80,11 +80,11 @@
 
   </div>
 
-  <div class="file-add-section" *ngIf="!filesToUpload || fileControlConfig.maxFiles > filesToUpload.length"
+  <div class="file-add-section" *ngIf="!readonly && ( !filesToUpload || fileControlConfig.maxFiles > filesToUpload.length )"
     [ngClass]="{'tag-required': fileControlConfig.tagRequired,
                 'multiple': fileControlConfig.maxFiles > 1}">
 
-    <div class="file-add" *ngIf="!readonly"
+    <div class="file-add"
       [title]="fileControlConfig.textAccion">
       <label [for]="idFileControl">
         <mat-icon>add</mat-icon>
@@ -99,10 +99,17 @@
       <emp-ng-select name="tag"
         bindLabel="name"
         bindValue="type"
+        [config]="{bindByValue: false}"
         [(ngModel)]="tagFileSelected"
         [items]="fileControlConfig.tagsList"
         [showError]="!tagFileSelected">
       </emp-ng-select>
+    </div>
+
+    <div *ngIf="!!tagFileSelected?.templateUrl" class="template-file-btn"
+      [title]="fileControlConfig.textTemplate"
+      (click)="onDownloadTemplateFile()">
+      <mat-icon>cloud_download</mat-icon>
     </div>
 
   </div>
