--- a/src/app/views/search-services/tract-index-entry-tabbed-view/tract-index-entry-tabbed-view.component.html
+++ b/src/app/views/search-services/tract-index-entry-tabbed-view/tract-index-entry-tabbed-view.component.html
@@ -15,7 +15,7 @@
 
   <div class="card-body">
 
-    <mat-tab-group>
+    <mat-tab-group mat-stretch-tabs="false">
 
       <mat-tab label="Sello" *ngIf="displayStampMediaTab">
 
