--- a/src/app/workspaces/land-transactions/transactions-main-page/parts/land-transaction-tabbed-view.component.html
+++ b/src/app/workspaces/land-transactions/transactions-main-page/parts/land-transaction-tabbed-view.component.html
@@ -2,7 +2,7 @@
              [hint]="cardHint"
              (cardClose)="onClose()">
 
-<mat-tab-group [(selectedIndex)]="selectedTabIndex">
+<mat-tab-group mat-stretch-tabs="false" [(selectedIndex)]="selectedTabIndex">
   <mat-tab label="Información del trámite">
     <emp-land-transaction-editor
       [transaction]="transaction">
