--- a/src/app/views/_access-control/access-control-viewer/access-control-viewer.component.html
+++ b/src/app/views/_access-control/access-control-viewer/access-control-viewer.component.html
@@ -16,9 +16,9 @@
     <div class="card-header-options">
 
       <button *empNgHasPermission="Permissions.FEATURE_ACCESS_CONTROL_EDITION"
-        class="btn-action" fxFlexOffset="1.5rem"
+        class="btn-action"
         (click)="onCreateSubjectClicked()">
-        Agregar usuario
+        Agregar cuenta
       </button>
 
     </div>
@@ -27,13 +27,13 @@
 
   <div class="card-body" [empNgSpinnerHost]="spinner">
 
-    <div fxLayout="column" fxFlexFill>
+    <div class="fx-column-container-fill">
 
       <emp-ng-spinner #spinner [visible]="isLoading">
 
       </emp-ng-spinner>
 
-      <emp-ng-access-control-filter fxFlex="none"
+      <emp-ng-access-control-filter class="fx-item-none"
         (accessControlFilterEvent)="onAccessControlFilterEvent($event)">
 
       </emp-ng-access-control-filter>
@@ -47,7 +47,8 @@
 
         <ng-container [ngSwitch]="query.queryType">
 
-          <emp-ng-subjects-table *ngSwitchCase="QueryTypes.Subjects" fxFlex
+          <emp-ng-subjects-table *ngSwitchCase="QueryTypes.Subjects"
+            class="fx-item"
             [dataList]="subjectsList"
             [selected]="selectedSubject"
             (subjectsTableEvent)="onSubjectsTableEvent($event)">
