--- a/src/app/views/_access-control/subjects/subject-editor.component.html
+++ b/src/app/views/_access-control/subjects/subject-editor.component.html
@@ -2,13 +2,14 @@
 
 </emp-ng-spinner>
 
-<div fxLayout="column" fxFlexFill fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0.75rem"
+<div class="fx-column-container-fill fx-gap-three-quarter"
   [empNgSpinnerHost]="spinner">
 
-  <emp-ng-subject-header fxFlex="none"
+  <emp-ng-subject-header class="fx-item-none"
     [subject]="subject"
     [canEdit]="canEdit"
     [isDeleted]="isDeleted"
+    [isSuspended]="isSuspended"
     [canGeneratePassword]="canGeneratePassword"
     (subjectHeaderEvent)="onSubjectHeaderEvent($event)">
 
