--- a/src/app/views/_access-control/subjects/subject-tabbed-view.component.html
+++ b/src/app/views/_access-control/subjects/subject-tabbed-view.component.html
@@ -5,22 +5,23 @@
 
   </emp-ng-spinner>
 
-  <mat-tab-group>
+  <mat-tab-group mat-stretch-tabs="false">
 
-    <mat-tab label="Usuario">
+    <mat-tab label="Cuenta">
 
-      <div fxLayout="column" fxFlexFill fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0.75rem">
+      <div class="fx-column-container-fill fx-gap-three-quarter">
 
-        <emp-ng-subject-editor fxFlex="none"
+        <emp-ng-subject-editor class="fx-item-none"
           [subject]="subject"
           [canEdit]="canEdit"
-          [canGeneratePassword]="!isDeleted && hasContexts"
+          [canGeneratePassword]="!isDeleted && !isSuspended && hasContexts"
           [isDeleted]="isDeleted"
+          [isSuspended]="isSuspended"
           (subjectEditorEvent)="onSubjectEditorEvent($event)">
 
         </emp-ng-subject-editor>
 
-        <div fxFlex="none">
+        <div class="fx-item-none">
 
           <div class="section-title"> Aplicaciones </div>
 
