--- a/src/app/views/_access-control/credentials/change-password-modal.component.html
+++ b/src/app/views/_access-control/credentials/change-password-modal.component.html
@@ -5,96 +5,12 @@
     hint='Ingrese la información requerida para actualizar la contraseña.'
     (cardClose)="onClose()">
 
-    <div class="card-body-padding" [empNgSpinnerHost]="spinner">
+    <div class="card-body-padding">
 
-      <emp-ng-spinner #spinner [visible]="submitted">
+      <emp-ng-change-password
+        (changePasswordEvent)="onChangePasswordEvent($event)">
 
-      </emp-ng-spinner>
-
-      <form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
-
-        <div fxLayout="column" fxLayoutGap="0.5rem" fxLayoutGap.lt-md="0.5rem">
-
-          <div fxFlex>
-            <label for="userID">Usuario:</label>
-            <input type="text" id="userID" name="userID" autocomplete="off" class="text-box"
-              formControlName="userID"
-              [class.invalid-control]="formHelper.isControlInvalid(form.controls.userID)">
-          </div>
-
-          <div fxFlex>
-            <label for="currentPassword">Contraseña actual:</label>
-            <input [type]="showPassword ? 'text' : 'password'"
-              id="current-password" name="current-password" autocomplete="current-password" class="text-box"
-              formControlName="currentPassword"
-              [class.invalid-control]="formHelper.isControlInvalid(form.controls.currentPassword)">
-          </div>
-
-          <br>
-
-          <mat-divider class="horizontal-slim">
-
-          </mat-divider>
-
-          <br>
-
-          <div fxFlex>
-            <label for="new-password">Nueva contraseña:</label>
-            <input [type]="showPassword ? 'text' : 'password'"
-              id="new-password" name="newPassword" autocomplete="new-password" class="text-box"
-              formControlName="newPassword"
-              [class.invalid-control]="formHelper.isControlInvalid(form.controls.newPassword)">
-          </div>
-
-          <div fxFlex>
-            <label for="confirmNewPassword">
-              Confirmar nueva contraseña:
-              <span class="warning-text" *ngIf="form.errors?.matchOther">
-                (Las contraseñas no coinciden)
-              </span>
-            </label>
-            <input [type]="showPassword ? 'text' : 'password'"
-              id="confirmNewPassword" name="confirmNewPassword" autocomplete="new-password" class="text-box"
-              formControlName="confirmNewPassword"
-              [class.invalid-control]="formHelper.isControlInvalid(form.controls.confirmNewPassword) ||
-                                       form.errors?.matchOther">
-          </div>
-
-          <mat-checkbox [checked]="showPassword"
-            (click)="$event.stopPropagation"
-            (change)="showPassword = !showPassword">
-            Mostrar contraseñas
-          </mat-checkbox>
-
-          <ng-container *ngIf="form.controls.newPassword.errors">
-            <br>
-            <div class="inline-info">{{newPasswordErrorsText}}</div>
-          </ng-container>
-
-
-          <mat-divider class="horizontal-slim">
-
-          </mat-divider>
-
-
-          <div fxLayout="row">
-
-            <div fxFlex fxLayoutAlign="end center">
-
-              <button type="submit"
-                [class.btn]="!formHelper.isFormReady(form)"
-                [class.btn-action]="formHelper.isFormReady(form)"
-                (click)="onUpdateCredentialsClicked()">
-                Cambiar contraseña
-              </button>
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </form>
+      </emp-ng-change-password>
 
     </div>
 
